--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
 </head>
 <body>
     helow
+<script type="text/javascript">
+   var uid = '450539';
+   var wid = '676494';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
 </body>
 </html>
