--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="in">
 <head>
     <meta charset="UTF-8">
+    <meta name="juicyads-site-verification" content="23578c926c0cccb65d643bae61250259">
     <title>cedef</title>
 </head>
 <body>
