--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <script type="text/javascript">
    var uid = '450539';
    var wid = '676494';
-   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
-   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+   var pop_tag = document.createElement('script');pop_tag.src='https://cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='https://cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
 </script>
 <!-- JuicyAds v3.2P Start -->
 <script type="text/javascript">
@@ -20,5 +20,13 @@ var juicy_tags = ['a', 'img'];
 </script>
 <script type="text/javascript" src="https://js.juicyads.com/jp.php?c=34d4w2z2t224u4q2w2a4236464&u=http%3A%2F%2Fwww.juicyads.rocks"></script>
 <!-- JuicyAds v3.2P End -->
+<!-- JuicyAds PopUnders v3 Start -->
+<script type="text/javascript" src="https://js.juicyads.com/jp.php?c=34d4w2z2t224u4q2w2a4236464&u=http%3A%2F%2Fwww.juicyads.rocks"></script>
+<!-- JuicyAds PopUnders v3 End -->
+<!-- JuicyAds v3.0 -->
+<script type="text/javascript" data-cfasync="false" async src="https://poweredby.jads.co/js/jads.js"></script>
+<ins id="1005484" data-width="300" data-height="112"></ins>
+<script type="text/javascript" data-cfasync="false" async>(adsbyjuicy = window.adsbyjuicy || []).push({'adzone':1005484});</script>
+<!--JuicyAds END-->
 </body>
 </html>
