--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     helow
     <a href="youtube.com">ahshd</a>
+<!-- JuicyAds Native Interstitals v1.0 -->
+<script type="text/javascript" data-id="juicyads-native-ads" data-ad-zone="1005485" data-targets="a" src="https://js.juicyads.com/juicyads.native-ads.min.js"></script>
 <script type="text/javascript">
    var uid = '450539';
    var wid = '676494';
