--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     helow
-    <a href="youtube.com">ahshd</a>
+    <a href="https://youtube.com">yututp</a>
 <!-- JuicyAds Native Interstitals v1.0 -->
+<script type="text/javascript" data-id="juicyads-native-ads" data-ad-zone="1005485" data-targets="a" src="https://js.juicyads.com/juicyads.native-ads.min.js"></script>
+    <!-- JuicyAds Native Interstitals v1.0 -->
 <script type="text/javascript" data-id="juicyads-native-ads" data-ad-zone="1005485" data-targets="a" src="https://js.juicyads.com/juicyads.native-ads.min.js"></script>
 <script type="text/javascript">
    var uid = '450539';
