--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="juicyads-site-verification" content="23578c926c0cccb65d643bae61250259">
     <title>cedef</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4632722676342520"crossorigin="anonymous"></script>
 </head>
 <body>
     helow
