--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="juicyads-site-verification" content="23578c926c0cccb65d643bae61250259">
     <title>cedef</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4632722676342520"crossorigin="anonymous"></script>
-    <script type='text/javascript' src='//pl18098494.highperformancecpmgate.com/ec/0e/a5/ec0ea5032f443f582760d6a48a11c1ad.js'></script
+    <script type='text/javascript' src='https://pl18098494.highperformancecpmgate.com/ec/0e/a5/ec0ea5032f443f582760d6a48a11c1ad.js'></script
 </head>
 <body>
     helow
